Fix symmetric key overflowing

--- a/Pages/Dashboard/Account.cshtml.css
+++ b/Pages/Dashboard/Account.cshtml.css
@@ -1,4 +1,5 @@
 #body-content {
   border-radius: 10px;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+  max-width: 780px;
 }
